--- a/signup.html
+++ b/signup.html
@@ -87,12 +87,14 @@
         margin-top: 0.5em;
         padding: 1em;
         border-radius: 1em;
-        background-color: greenyellow;
-        color: black;
+        background-color:rgb(10, 34, 89);
+        color: white;
         margin-bottom: 2em;
+        border-width: 1px;
       }
       .submit:hover {
         background-color: white;
+        color: black;
         cursor: pointer;
       }
       .verify-otp {
