--- a/demo.html
+++ b/demo.html
@@ -6,36 +6,20 @@
   <title>Document</title>
   <style>
 
-.group{
-  position:relative;
-}
-.group>label{
-  padding:0 0.2em;
-  position:absolute;
-  top:-0.5em;
-  left:1em;
-  background-color:white;
-}
-
-.group>input{
-  padding:0.8em;
-  border-radius: 0.5em;
-  border: 2px solid lightblue;
-  outline:none;
-}
-
   </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
   
 
-  <form>
-    <div class="group">
-         <label>First name</label>
-         <input type="text" class="" placeholder="First Name">
-    </div>
-</form>
-
+  <div class="form-floating mb-3">
+    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+    <label for="floatingInput">Email address</label>
+  </div>
+  <div class="form-floating">
+    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+    <label for="floatingPassword">Password</label>
+  </div>
 
 
 </body>
