--- a/home.html
+++ b/home.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>home</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="icon" href="./images/logo-1-removebg-preview.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./home.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
+    <!-- section-1 -->
+    <section class="section-1">
+      <header class="header">
+        <div class="logo-conatiner">
+          <img src="./images/logo-1-removebg-preview.png" alt="" class="logo" />
+          <samll class="tag">Travel Made Easy</samll>
+        </div>
+        <i class="bi bi-list"></i>
+        <nav class="nav">
+          <a href="" class="nav-links">Home</a>
+          <a href="" class="nav-links">Services</a>
+          <a href="" class="nav-links">About</a>
+          <a href="" class="nav-links">Packages</a>
+          <a href="" class="nav-links">Country info</a>
+          <a href="" class="nav-links">Book</a>
+          <a href="" class="nav-links">Reviews</a>
+          <a href="" class="nav-links">Contact</a>
+          <!-- <a href="" class="nav-links">Admin Login</a> -->
+          <!-- <a href="" class="nav-links">Log Out</a> -->
+        </nav>
+        <div class="userId">
+          <i class="bi bi-person-circle"></i>
+          <p class="username"></p>
+          <div class="userOptions-1">
+            <div class="userOptions">
+              <a href="" class="nav-links-1">Bookings</a>
+              <a href="" class="nav-links-1">Log Out</a>
+            </div>
+          </div>
+        </div>
+
+        <button type="button" class="admin">Admin Login</button>
+      </header>
+
+      <div class="nav-hide">
+        <nav class="nav-1">
+          <a href="" class="nav-links-1">Home</a>
+          <a href="" class="nav-links-1">Services</a>
+          <a href="" class="nav-links-1">About</a>
+          <a href="" class="nav-links-1">Packages</a>
+          <a href="" class="nav-links-1">Country info</a>
+          <a href="" class="nav-links-1">Book</a>
+          <a href="" class="nav-links-1">Reviews</a>
+          <a href="" class="nav-links-1">Contact</a>
+          <a href="" class="nav-links-1">Admin Login</a>
+          <a href="" class="nav-links-1">Log Out</a>
+        </nav>
+      </div>
+    </section>
+
+    <script>
+      let navHide = document.querySelector(".nav-hide");
+      let hamburger = document.querySelector(".bi-list");
+      hamburger.addEventListener("click", () => {
+        if (navHide.style.display === "none") {
+          navHide.style.display = "block";
+        } else {
+          navHide.style.display = "none";
+        }
+      });
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./home.js"></script>
+  </body>
 </html>
