--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign in</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="icon" href="./images/logo-1-removebg-preview.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <style>
       body {
         background-image: url(./images/login.jpeg);
@@ -42,9 +48,8 @@
         padding: 1em;
         border-radius: 1em;
         font-size: 1.1em;
-        
       }
-  
+
       .email::placeholder {
         font-family: Arial, Helvetica, sans-serif;
       }
@@ -55,7 +60,7 @@
         background-color: rgb(10, 34, 89);
         color: rgb(249, 248, 248);
         margin-bottom: 2em;
-       border-width: 1px;
+        border-width: 1px;
       }
       .submit:hover {
         background-color: white;
@@ -92,19 +97,19 @@
         justify-content: center;
         flex-direction: column;
       }
-      @media screen and (max-width: 427px) {
+      @media (min-width: 320px) and (max-width: 427px) {
         .login {
-          margin-left: 3.2em;
+          margin-left: 3em;
           margin-top: 2.2em;
           height: 26em;
           width: 20em;
-          margin-right : 3.2em
+          margin-right: 3em;
         }
 
         .email,
-      #password,
-      .form-control {
-          width: 12em;
+        #password,
+        .form-control {
+          width: 15em;
           padding: 1em;
           border-radius: 1em;
           font-size: 0.8em;
@@ -137,8 +142,8 @@
         }
 
         .email,
-      #password,
-      .form-control {
+        #password,
+        .form-control {
           width: 16em;
           padding: 1em;
           border-radius: 1em;
@@ -189,12 +194,22 @@
           minlength="5"
           name="password"
         /> -->
-        <div class="form-floating mb-3 " >
-          <input type="email" class="form-control email" id="floatingInput" placeholder="name@example.com">
+        <div class="form-floating mb-3">
+          <input
+            type="email"
+            class="form-control email"
+            id="floatingInput"
+            placeholder="name@example.com"
+          />
           <label for="floatingInput">Email address</label>
         </div>
-        <div class="form-floating ">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <div class="form-floating">
+          <input
+            type="password"
+            class="form-control"
+            id="floatingPassword"
+            placeholder="Password"
+          />
           <label for="floatingPassword">Password</label>
         </div>
         <button type="submit" class="submit">Submit</button>
@@ -212,14 +227,14 @@
         let email = document.querySelector(".email").value;
         let password = document.querySelector("#floatingPassword").value;
         async function fetchUsers() {
-          let data = await fetch("http://localhost:3000/users");
+          let data = await fetch("https://jsproject-server.onrender.com/users");
           let details = await data.json();
           let finding = details.find(
             (element) =>
               email === element.email && password === element.password
           );
           if (finding) {
-            localStorage.setItem("LoggedIn-user", JSON.stringify(finding));
+            sessionStorage.setItem("LoggedIn-user", JSON.stringify(finding));
             alert("Login successfull!");
             window.location.href = "./home.html";
           } else {
@@ -229,23 +244,68 @@
         fetchUsers();
       });
 
-      let guest = document.querySelector('#Guest');
-      guest.addEventListener("click",(e)=>{
-        e.preventDefault()
-        let guestId = ("Guest" + Math.floor(Math.random()*10000))
-        let data = fetch("http://localhost:3000/users",{
-          method : "POST",
-          headers : {
-            "content-type":"applictaion/json"
+      // let guest = document.querySelector("#Guest");
+      // guest.addEventListener("click", (e) => {
+      //   e.preventDefault();
+      //   let guestId = "Guest" + Math.floor(Math.random() * 10000);
+      //   let data = fetch("http://localhost:3000/users", {
+      //     method: "POST",
+      //     headers: {
+      //       "Content-Type": "application/json",
+      //     },
+      //     body: JSON.stringify({ username: guestId }),
+      //   });
+      //   setUserItem(guestId);
+      // });
+      // async function setUserItem(guestId) {
+      //   let data = await fetch("http://localhost:3000/users");
+      //   let details = await data.json();
+      //   let finding = details.find((element) => element.username === guestId);
+      //   console.log(finding);
+      //   if (finding) {
+      //     sessionStorage.setItem("LoggedIn-user", JSON.stringify(finding));
+      //     window.location.href = "./home.html";
+      //     alert("Login successfull!");
+      //   }
+      // }
+      let guest = document.querySelector("#Guest");
+      guest.addEventListener("click", async (e) => {
+        e.preventDefault();
+        let guestId = "Guest" + Math.floor(Math.random() * 10000);
+        await fetch("https://jsproject-server.onrender.com/users", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
           },
-          body : JSON.stringify({guestId})
-        })
-        localStorage.setItem("LoggedIn-Guest",JSON.stringify(guestId))
-        alert('Login successfull!')
-        window.location.href = "./home.html";
-      })
+          body: JSON.stringify({ username: guestId }),
+        });
+        setUserItem(guestId);
+      });
 
+      async function setUserItem(guestId) {
+        try {
+          let response = await fetch("https://jsproject-server.onrender.com/users");
+          if (!response.ok) throw new Error("Failed to fetch users");
+          let details = await response.json();
+          let finding = details.find((element) => element.username === guestId);
+          console.log(finding);
+          if (finding) {
+            sessionStorage.setItem("LoggedIn-user", JSON.stringify(finding));
+            alert("Login successful!");
+            window.open("./home.html") 
+          } else {
+            alert("User not found!");
+          }
+        } catch (error) {
+          console.error(error);
+          alert("An error occurred while logging in.");
+        }
+      }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
