--- a/signup.html
+++ b/signup.html
@@ -198,7 +198,7 @@
             let data = fetch("https://jsproject-server.onrender.com/users", {
               method: "POST",
               headers: {
-                "content-type": "appliction/json",
+                "content-type": "application/json",
               },
               body: JSON.stringify({
                 username,
