--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
           margin-left: 3em;
           margin-top: 2.2em;
           height: 26em;
-          
           width: 20em;
           margin-right: 3em;
         }
@@ -273,35 +272,40 @@
       guest.addEventListener("click", async (e) => {
         e.preventDefault();
         let guestId = "Guest" + Math.floor(Math.random() * 10000);
-        await fetch("https://jsproject-server.onrender.com/users", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ username: guestId }),
-        });
-        setUserItem(guestId);
+        // await fetch("https://jsproject-server.onrender.com/users", {
+        //   method: "POST",
+        //   headers: {
+        //     "Content-Type": "application/json",
+        //   },
+        //   body: JSON.stringify({ username: guestId }),
+        // });
+        // setUserItem(guestId);
+        sessionStorage.setItem("LoggedIn-user", JSON.stringify({username : guestId}));
+            alert("Login successfull!");
+            window.open("./home.html");
       });
 
-      async function setUserItem(guestId) {
-        try {
-          let response = await fetch("https://jsproject-server.onrender.com/users");
-          if (!response.ok) throw new Error("Failed to fetch users");
-          let details = await response.json();
-          let finding = details.find((element) => element.username === guestId);
-          console.log(finding);
-          if (finding) {
-            sessionStorage.setItem("LoggedIn-user", JSON.stringify(finding));
-            alert("Login successful!");
-            window.open("./home.html") 
-          } else {
-            alert("User not found!");
-          }
-        } catch (error) {
-          console.error(error);
-          alert("An error occurred while logging in.");
-        }
-      }
+      // async function setUserItem(guestId) {
+      //   try {
+      //     let response = await fetch(
+      //       "https://jsproject-server.onrender.com/users"
+      //     );
+      //     if (!response.ok) throw new Error("Failed to fetch users");
+      //     let details = await response.json();
+      //     let finding = details.find((element) => element.username === guestId);
+      //     console.log(finding);
+      //     if (finding) {
+      //       sessionStorage.setItem("LoggedIn-user", JSON.stringify(finding));
+      //       alert("Login successfull!");
+      //       window.open("./home.html");
+      //     } else {
+      //       alert("User not found!");
+      //     }
+      //   } catch (error) {
+      //     console.error(error);
+      //     alert("An error occurred while logging in.");
+      //   }
+      // }
     </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
