media qureies add

--- a/complaint.html
+++ b/complaint.html
@@ -86,6 +86,134 @@
           color: black;
         }
       }
+
+
+      /* For Tablets (Max Width: 1024px) */
+@media (max-width: 1024px) {
+  .welcome {
+    right: 10em;
+    font-size: 1.5rem;
+  }
+
+  .tag {
+    font-size: 1rem;
+    top: 6.5em;
+  }
+
+  .information {
+    margin-top: 8em;
+  }
+
+  table {
+    width: 90%;
+    font-size: 1rem;
+  }
+
+  .back,
+  .logout {
+    width: 6em;
+    margin-top: 4em;
+    font-size: 1rem;
+  }
+}
+
+/* For Mobile Devices (Max Width: 768px) */
+@media (max-width: 768px) {
+  .logo {
+    width: 120px;
+  }
+
+  .welcome {
+    font-size: 1.3rem;
+    text-align: center;
+    position: relative;
+    right: 0;
+    margin-top: 1em;
+  }
+
+  .tag {
+    font-size: 0.9rem;
+    /* position: relative; */
+    top: 7em;
+    left: 0;
+    text-align: center;
+  }
+
+  .information {
+    margin-top: 6em;
+    width: 100%;
+    overflow-x: auto;
+  }
+
+  table {
+    width: 100%;
+    font-size: 0.9rem;
+  }
+
+  table thead tr th {
+    padding: 0.8em;
+    font-size: 1rem;
+  }
+
+  .tbody tr td {
+    padding: 0.8em;
+    font-size: 0.9rem;
+  }
+
+  .back,
+  .logout {
+    width: 100%;
+    padding: 1em;
+    font-size: 1rem;
+    margin-left: 0;
+    margin-top: 2em;
+  }
+}
+
+/* For Small Mobile Devices (Max Width: 480px) */
+@media (max-width: 480px) {
+  .logo {
+    width: 100px;
+  }
+
+  .welcome {
+    font-size: 1.1rem;
+    margin-top: 0.5em;
+  }
+
+  .tag {
+    font-size: 0.8rem;
+  }
+
+  .information {
+    margin-top: 4em;
+    width: 100%;
+    overflow-x: auto;
+  }
+
+  table {
+    font-size: 0.8rem;
+  }
+
+  table thead tr th {
+    font-size: 0.9rem;
+    padding: 0.5em;
+  }
+
+  .tbody tr td {
+    font-size: 0.8rem;
+    padding: 0.5em;
+  }
+
+  .back,
+  .logout {
+    width: 100%;
+    padding: 0.8em;
+    font-size: 0.9rem;
+    margin-top: 1.5em;
+  }
+}
+
     </style>
   </head>
   <body>
