--- a/signup.html
+++ b/signup.html
@@ -116,6 +116,112 @@
         box-sizing: border-box;
         display: none;
       }
+
+      /* For Tablets (Max Width: 1024px) */
+@media (max-width: 1024px) {
+  .signup, .verify-otp {
+    width: 80%;
+    left: 10%;
+    top: 15%;
+    height: auto;
+    padding: 2em;
+  }
+
+  .logo {
+    width: 120px;
+  }
+
+  .heading {
+    font-size: 1.8rem;
+  }
+
+  .tag {
+    font-size: 1rem;
+    top: 5.5em;
+  }
+
+  .email, #password, #cpassword, .Username, .input-opt {
+    width: 90%;
+    font-size: 1rem;
+  }
+
+  .submit, .btn-otp {
+    width: 90%;
+    font-size: 1rem;
+  }
+}
+
+/* For Mobile Devices (Max Width: 768px) */
+@media (max-width: 768px) {
+  .signup, .verify-otp {
+    width: 90%;
+    left: 5%;
+    top: 15%;
+    height: auto;
+    padding: 2em;
+  }
+
+  .logo {
+    width: 100px;
+  }
+
+  .heading {
+    font-size: 1.5rem;
+  }
+
+  .tag {
+    font-size: 0.9rem;
+    top: 6em;
+  }
+
+  .email, #password, #cpassword, .Username, .input-opt {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .submit, .btn-otp {
+    width: 100%;
+    font-size: 1rem;
+    padding: 0.8em;
+  }
+}
+
+/* For Small Mobile Devices (Max Width: 480px) */
+@media (max-width: 480px) {
+  .signup, .verify-otp {
+    width: 95%;
+    left: 2.5%;
+    top: 13%;
+    height: auto;
+    padding: 1.5em;
+  }
+
+  .logo {
+    width: 80px;
+  }
+
+  .heading {
+    font-size: 1.3rem;
+  }
+
+  .tag {
+    font-size: 0.8rem;
+    top: 5.2em;
+  }
+
+  .email, #password, #cpassword, .Username, .input-opt {
+    width: 100%;
+    font-size: 0.9rem;
+    padding: 0.6em;
+  }
+
+  .submit, .btn-otp {
+    width: 100%;
+    font-size: 0.9rem;
+    padding: 0.7em;
+  }
+}
+
     </style>
   </head>
   <body>
