--- a/admin.html
+++ b/admin.html
@@ -78,6 +78,127 @@
         background-color: rgb(30, 102, 164);
         width: 5em;
       }
+
+      /* For Tablets (Max Width: 1024px) */
+@media (max-width: 1024px) {
+  .welcome {
+    right: 10em;
+    font-size: 1.5rem;
+  }
+
+  .middle {
+    gap: 8em;
+  }
+
+  .card-1,
+  .card-2 {
+    height: 18em;
+    width: 15em;
+  }
+
+  .cardimg {
+    height: 12em;
+    width: 12em;
+  }
+
+  .btn,
+  .btn1 {
+    width: 6em;
+    padding: 0.8em;
+    font-size: 0.9rem;
+  }
+}
+
+/* For Mobile Devices (Max Width: 768px) */
+@media (max-width: 768px) {
+  .logo {
+    width: 120px;
+  }
+
+  .welcome {
+    font-size: 1.3rem;
+    text-align: center;
+    position: relative;
+    right: 0;
+    margin-top: 1em;
+  }
+
+  .tag {
+    font-size: 0.9rem;
+   
+    left: 0;
+    text-align: center;
+  }
+
+  .middle {
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+    margin-top: 3em;
+    height: auto;
+  }
+
+  .card-1,
+  .card-2 {
+    width: 90%;
+    max-width: 300px;
+    height: auto;
+    padding: 1.5em;
+  }
+
+  .cardimg {
+    height: 10em;
+    width: 10em;
+  }
+
+  .btn,
+  .btn1 {
+    width: 7em;
+    padding: 1em;
+    font-size: 1rem;
+  }
+}
+
+/* For Small Mobile Devices (Max Width: 480px) */
+@media (max-width: 480px) {
+  .logo {
+    width: 100px;
+  }
+
+  .welcome {
+    font-size: 1.1rem;
+    margin-top: 0.5em;
+  }
+
+  .tag {
+    font-size: 0.8rem;
+  }
+
+  .middle {
+    gap: 1.5em;
+  }
+
+  .card-1,
+  .card-2 {
+    width: 90%;
+    max-width: 280px;
+    height: auto;
+    padding: 1em;
+  }
+
+  .cardimg {
+    height: 9em;
+    width: 9em;
+  }
+
+  .btn,
+  .btn1 {
+    width: 6em;
+    padding: 0.9em;
+    font-size: 0.9rem;
+  }
+}
+
     </style>
   </head>
   <body>
