--- a/bookings.html
+++ b/bookings.html
@@ -86,6 +86,56 @@
           color: black;
         }
       }
+
+      /* Responsive Design */
+      @media (max-width: 768px) {
+        .logo {
+          width: 100px;
+        }
+        .welcome {
+          font-size: 1.3rem;
+          left : 15em
+        }
+        .tag {
+          font-size: 0.9rem;
+        }
+        th, td {
+          padding: 0.7em;
+          font-size: 0.9rem;
+        }
+        .back,
+        .logout {
+          width: 6em;
+          font-size: 0.9rem;
+          padding: 0.8em;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .logo {
+          width: 80px;
+        }
+        .welcome {
+          font-size: 1.1rem;
+          left: 9.5em;
+        }
+        .tag {
+          font-size: 0.8rem;
+        }
+        .information {
+          width: 100%;
+          overflow-x: auto;
+        }
+        table {
+          font-size: 0.8rem;
+        }
+        .back,
+        .logout {
+          width: 5.5em;
+          font-size: 0.8rem;
+          padding: 0.7em;
+        }
+      }
     </style>
   </head>
   <body>
