--- a/booknow.html
+++ b/booknow.html
@@ -126,6 +126,137 @@
   }
 }
 
+/* For Tablets (Max Width: 1024px) */
+@media (max-width: 1024px) {
+  .welcome {
+    right: 10em;
+    font-size: 1.5rem;
+  }
+
+  .tag {
+    font-size: 1rem;
+    top: 5.5em;
+  }
+
+  .section-4 {
+    flex-direction: column;
+    height: auto;
+    padding: 2em;
+  }
+
+  .section-4-1 {
+    width: 80%;
+  }
+
+  .section-4-2 {
+    width: 90%;
+  }
+
+  .form-1 {
+    width: 90%;
+  }
+
+  .booknow {
+    width: 100%;
+  }
+}
+
+/* For Mobile Devices (Max Width: 768px) */
+@media (max-width: 768px) {
+  .logo {
+    width: 120px;
+  }
+
+  .welcome {
+    font-size: 1.3rem;
+    text-align: center;
+    position: relative;
+    right: 0;
+    margin-top: 1em;
+  }
+
+  .tag {
+    font-size: 0.9rem;
+     /* position: relative; */
+    top: 7em; 
+    left: 0;
+    text-align: center;
+  }
+
+  .section-4 {
+    flex-direction: column;
+    height: auto;
+    padding: 1.5em;
+  }
+
+  .section-4-1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  .section-4-1 img {
+    width: 90%;
+    height: auto;
+  }
+
+  .section-4-2 {
+    width: 100%;
+    font-size: 0.9rem;
+  }
+
+  .form-1 {
+    width: 100%;
+    font-size: 1rem;
+    padding: 0.8em;
+  }
+
+  .booknow {
+    width: 100%;
+    padding: 1em;
+    font-size: 1rem;
+  }
+}
+
+/* For Small Mobile Devices (Max Width: 480px) */
+@media (max-width: 480px) {
+  .logo {
+    width: 100px;
+  }
+
+  .welcome {
+    font-size: 1.1rem;
+    margin-top: 0.5em;
+  }
+
+  .tag {
+    font-size: 0.8rem;
+  }
+
+  .section-4 {
+    padding: 1em;
+  }
+
+  .section-4-1 img {
+    width: 100%;
+  }
+
+  .section-4-2 h1 {
+    font-size: 1.2rem;
+  }
+
+  .form-1 {
+    width: 100%;
+    font-size: 0.9rem;
+    padding: 0.7em;
+  }
+
+  .booknow {
+    width: 100%;
+    padding: 1em;
+    font-size: 0.9rem;
+  }
+}
+
 
 
   </style>
