--- a/admin.html
+++ b/admin.html
@@ -225,11 +225,11 @@
     <script>
       let btn = document.querySelector(".btn");
       btn.addEventListener("click", () => {
-        window.location.href = "./bookings.html","_self";
+        window.location.href = "./bookings.html";
       });
       let btn1 = document.querySelector(".btn1");
       btn1.addEventListener("click", () => {
-        window.location.href = "./complaint.html","_self";
+        window.location.href = "./complaint.html";
       });
     </script>
   </body>
