--- a/adminlogin.html
+++ b/adminlogin.html
@@ -238,7 +238,7 @@
 
         if (adminEmail === getEmail && adminPassword === +getPassword) {
           alert("Login successfull!");
-          window.location.href = "./admin.html", "_self";
+          window.location.href = "./admin.html";
         } else {
           alert("Inavlid Email or Password !");
         }
