--- a/bookings.html
+++ b/bookings.html
@@ -195,7 +195,7 @@
 
       let logout = document.querySelector(".logout");
       logout.addEventListener("click", () => {
-        window.location.href = "./adminlogin.html" , "_self";
+        window.location.href = "./adminlogin.html";
       });
     </script>
   </body>
