--- a/booknow.html
+++ b/booknow.html
@@ -388,7 +388,7 @@ booknow.addEventListener("click", () => {
       bookinfo,
     })
   );
-  window.open("./home.html")
+  window.open("./home.html","_self")
 });
 
   </script>
