--- a/complaint.html
+++ b/complaint.html
@@ -265,12 +265,12 @@
 
       let back = document.querySelector(".back");
       back.addEventListener("click", () => {
-        window.location.href = "./admin.html", "_self";
+        window.location.href = "./admin.html";
       });
 
       let logout = document.querySelector(".logout");
       logout.addEventListener("click", () => {
-        window.location.href="./adminlogin.html","_self";
+        window.location.href="./adminlogin.html";
       });
     </script>
   </body>
