--- a/admin.html
+++ b/admin.html
@@ -225,7 +225,7 @@
     <script>
       let btn = document.querySelector(".btn");
       btn.addEventListener("click", () => {
-        window.location.href = "./bookings.html";
+        window.location.href = "./bookings.html","_self";
       });
       let btn1 = document.querySelector(".btn1");
       btn1.addEventListener("click", () => {
