--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         // setUserItem(guestId);
         sessionStorage.setItem("LoggedIn-user", JSON.stringify({username : guestId}));
             alert("Login successfull!");
-            window.open("./home.html");
+            window.open("./home.html","_self");
       });
 
       // async function setUserItem(guestId) {
